--- a/stplay/index.html
+++ b/stplay/index.html
@@ -47,10 +47,12 @@
             <div class='menu-button'></div>
         </label>
         <ul class="menu">
+            <!-- <div class="navrad"> -->
             <li><a href="#">About Us</a></li>
             <li><a href="#">Learning</a></li>
             <li><a href="#">Services</a></li>
             <li><a href="#">Contact Us</a></li>
+            <!-- </div> -->
             <li><button class="login-button" href="#">Login</button></li>
             <li><button class="join-button" href="#">Sign Up<i class="fa fa-chevron-right arrow"></i></button></li>
         </ul>
@@ -61,7 +63,7 @@
     <section class="section">
         <div class="grid-container">
             <div class="grid-item grid-items-1">
-                <h1 class="herotext">Play In The<br> Competition<br> Rigth Now</h1>
+                <h1 class="herotext slide">Play In The<br> Competition<br> Rigth Now</h1>
                 <p class="herop">Lets enjoy, play and learn in a great<br>
                     and priceless place and ern awards.</p>
 
